Quality of life improvements
Managed to get rid having to supply your username
Added support to get API keys from a secrets.json
Added error checkig for Config loading
Adding Ready command for testing

--- a/twot.csproj
+++ b/twot.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>cf75e60f-09c7-4d5f-b1ef-8389a7803fc8</UserSecretsId>
     <Version>0.0.1</Version>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.1.3" />
